# development-proposals

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  development-proposal-template.rst  gap-analysis-template.rst  instructions  jayktest  openstack-common.conf  setup.cfg  test-requirements.txt  tox.ini  user-story-template.rst  user-story-tracker.json
development-proposals/parking/: doc-usecase-snippet.rst  encrypted-storage.rst  external-fw-config.rst  lifecycle-management.rst  onboarding-management.rst  security-segregation.rst  service-separation.rst
development-proposals/proposed/: baremetal-service.rst  capacity-management.rst  complex-instance-placement.rst  db-hygiene.rst  deploying-virtual-ims-core.rst  feature-classification.rst  ha-vm.rst  openstack-extreme-testing.rst  refstack-config-info.rst  rolling-upgrades.rst  security-policy-enforcement.rst  traceability-in-services.rst
doc/source/: conf.py  development-proposals  index.rst  installation.rst  tracker_overview.rst  usage.rst  user-stories
forum/: README.rst  extract_tag.py  extract_tags.py  get_etherpads.py
forum/201705-bos/: TAG-.md  TAG-action-item.md  TAG-action.md  TAG-actionitem.md  TAG-actionitemlcoo.md  TAG-actions.md  TAG-all-projects.md  TAG-apiwg.md  TAG-best-practice.md  TAG-board.md  TAG-call.md  TAG-compliance.md  TAG-concern.md  TAG-crossproject.md  TAG-deployment-team.md  TAG-discoverability.md  TAG-documentation.md  TAG-emagana.md  TAG-etsinfv.md  TAG-ewg.md  TAG-featuretracker.md  TAG-feedback.md  TAG-femdc.md  TAG-future.md  TAG-gap.md  TAG-gaps.md  TAG-gnocchi.md  TAG-go.md  TAG-goal.md  TAG-heidijoy.md  TAG-infra.md  TAG-interop.md  TAG-ironic).md  TAG-ironic.md  TAG-k8s.md  TAG-keystone.md  TAG-lcoo.md  TAG-multilanguage.md  TAG-newfeature.md  TAG-nfv.md  (+34 more)
forum/201705-boston/: TAG-action.md  TAG-apiwg.md  TAG-board.md  TAG-call.md  TAG-compliance.md  TAG-deployment-team.md  TAG-dialogue.md  TAG-documentation.md  TAG-featuretracker.md  TAG-go.md  TAG-heidijoy.md  TAG-k8s.md  TAG-keystone.md  TAG-nfv.md  TAG-nova.md  TAG-onboarding.md  TAG-openstack-barbican..md  TAG-openstack-containers.md  TAG-openstack-doc.md  TAG-openstack-ha.md  TAG-openstack-infra.md  TAG-openstack-karbor.md  TAG-openstack-meeting-3.md  TAG-openstack-meeting-alt.md  TAG-openstack-meetings.md  TAG-openstack-nova.md  TAG-openstack-publiccloud.md  TAG-openstack-qa.md  TAG-openstack-sdks.md  TAG-openstack-stackalytics.md  TAG-painpoint.md  TAG-publiccloud.md  TAG-qa.md  TAG-science-wg.md  TAG-sdk.md  TAG-sig-openstack.md  TAG-telcowg.md  TAG-todo.md  TAG-trackchair.md  TAG-translation.md  (+6 more)
gap-analysis/proposed/: baremetal-service.rst  capacity-management.rst  db-hygiene.rst
openstack-user-stories/: __init__.py
openstack-user-stories/tests/: test_openstack-user-stories.py
openstack_user_stories/: __init__.py
openstack_user_stories/tests/: test_openstack_user_stories.py
tracker/: baremetal-service.json  categorized-configs.json  db-hygiene.rst  refstack.json  rolling-upgrades.json  sample-tracker.json
user-stories/draft/: Onboarding.rst  ask-openstack-update.rst  capacity_control.rst  capacity_management.rst  cbarrett.rst  complex_instance_placement.rst  db-hygiene.rst  encrypted_storage.rst  encryptedstorage.rst  external-fw-config.rst  ha_vm.rst  high-scale-media-Telco-apps.rst  lifecycle_management.rst  onboarding.rst  onboarding_management.rst  reserving-resources-for-applications.rst  rolebasedaccess.rst  rollingupgrades.rst  scheduler-simulator.rst  security_policy_enforcement.rst  security_segregation.rst  serviceseparation.rst  stable_branch_support.rst  test.rst  user-story-onboarding.rst
(+54 files in other folders)
