[metadata]
name = openstack-user-stories
summary = "User stories and associated trackers used by Product WG"
description-file =
    README.rst
author = OpenStack Product WG
author-email = producti-wg@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/ProductTeam
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    openstack_user_stories

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = openstack-user-stories/locale
domain = openstack-user-stories

[update_catalog]
domain = openstack-user-stories
output_dir = openstack-user-stories/locale
input_file = openstack-user-stories/locale/openstack-user-stories.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = openstack-user-stories/locale/openstack-user-stories.pot
